// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FakeUser actionCreators Should create action on fetch fail 1`] = `
Object {
  "payload": Object {
    "err": "err",
  },
  "type": "USER_FETCH_FAIL",
}
`;

exports[`FakeUser actionCreators Should create action on fetch success 1`] = `
Object {
  "payload": Object {
    "name": "User data...",
  },
  "type": "USER_FETCH_SUCCESS",
}
`;

exports[`FakeUser actionCreators Should create action to init fakeUser 1`] = `
Object {
  "type": "INIT",
}
`;
